--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 .section--top
 {
-    background: url("./images/space.jpg");
+    background: url("./images/main.jpg");
     height: 1051px;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: 100%;
 }
 
 .section--top .text--event
@@ -17,8 +20,8 @@
 
 .section--top .col.col--event
 {
-    margin-top: 109px;
-    margin-bottom: 189px;
+    margin-top: 80px;
+    margin-bottom: 180px;
 }
 
 .ellips
@@ -146,8 +149,11 @@
 {
     margin-bottom: 80px;
 
-    background: url("./images/space.jpg");
+    background: url("./images/main.jpg");
     height: 1051px;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: 100%;
 }
 
 .section--what .what--text--bold
@@ -240,11 +246,6 @@
     color: #000000;
 
     margin-bottom: 97px;
-}
-
-.more--text
-{
-    margin-top: 85px;
 }
 
 .section--join .join--text--tight
@@ -377,3 +378,166 @@
 {
     margin-bottom: 120px;
 }
+
+.anim-img 
+  {
+    z-index: 1;
+    -webkit-transition: all ease 500ms;
+    -o-transition: all ease 500ms;
+    transition: all ease 500ms;
+  }
+
+.anim-img:hover 
+  {
+    -webkit-box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    -webkit-transition: all ease 500ms;
+    -o-transition: all ease 500ms;
+    transition: all ease 500ms;
+  }
+
+
+  @media (max-width: 1400px)
+  {
+    .section--top .information--text--bold
+    {
+        font-size: 60px;
+    }
+
+    .section--top .information--text--tight
+    {
+        font-size: 30px;
+    }
+
+    .section--top .btn--other
+    {
+        width: 300px;
+        height: 70px;
+    
+        margin-top: 70px;
+    }
+
+    .section--about .img--about
+    {
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+        margin-bottom: 40px;
+    }
+
+    .section--about .about--text--bold
+    {
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    .section--what
+    {
+        height: 1000px;
+    }
+
+    .section--what .what--text--tight
+    {
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    .section--what .what--text--bold
+    {
+        font-size: 40px;
+        margin-bottom: 10px;
+        margin-top: 40px;
+    }
+
+    .section--what .what--text--mini
+    {
+        font-size: 15px;
+        margin-bottom: 50px;
+        margin-top: 40px;
+    }
+
+    .section--what .img--what
+    {
+        width: 180px;
+        height: 180px;
+
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+
+    .section--what .img--media
+    {
+        margin-top: 10px;
+    }
+
+    .section--what .btn--what
+    {
+        width: 300px;
+        height: 70px;
+
+        margin-bottom: 40px;
+    }
+
+    .section--join .join--text--tight
+    {
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .section--join .more--text
+    {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    .section--join .join--text--bold
+    {
+        font-size: 36px;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .section--join .join--text--normal
+    {
+        font-size: 27px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .section--join .text--bl
+    {
+        margin-bottom: 40px;
+    }
+
+    .footer .img--footer
+    {
+        width: 120px;
+
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+
+  }
+
+  @media (max-width: 1600px)
+  {
+      .section--join .img--map
+      {
+          width: 500px;
+          height: 300px; 
+
+          margin-top: 15px;
+      
+          margin-bottom: 80px;
+
+          position: relative;
+          left: 50%;
+          transform: translate(-50%, 0);
+      }
+  }
